changes in "content-info" style minor changes like div sizes and a lot of css better placed

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -5,6 +5,14 @@
     - möglicher zwischenschritt benötigt, AJAX
 
 
+    STYLES:
+
+    - styles auslagern
+    - styles merge
+    -
+
+
+
 ----------------------------------------------
 
 Design Ideen:
